@@ -12,6 +12,7 @@ Bugfixes
 * Fix handling of duplicate plugins on Windows
 * Allow else clause in post-list plugin. (Issue #3436)
 * Ensure `type` metadata value from plugins is preserved (Issue 3445)
+* Fix path handlers with slashes on Windows
 
 New in v8.1.1
 =============
